# CloudCompute

./: .codacy.yaml  .gitattributes  .gitignore  .openapi-generator-ignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile  README.md  cleanup_ignore_files.sh  copy_ignore_files.sh  gen_jm_client.bat  gen_jm_client.sh  gen_jm_server.bat  gen_jm_server.sh  gen_python_jm_client.sh  gen_python_wm_client.sh  gen_wm_server.bat  gen_wm_server.sh  last_updated_java_dependencies  last_updated_worker_dependencies  lombok.config  pom.xml  requirements.txt  rules.xml  settings.xml  update-java-dependencies.sh  update-python-dependencies.sh
.github/: CODEOWNERS  pull_request_template.md
cleanup-lambda/: clean_resources.py
common/: alpinecosv2Entry.sh  newrelic.yml  pom.xml
completion-lambda/: pom.xml
coverage/: pom.xml
job-manager/: Dockerfile  README.md  build.sh  doc-gen.sh  generate_client.bat  generate_client.sh  pom.xml  swaggergen-config-csharp.json  validate_java_server.sh
scalingtest/: Dockerfile  run_tests.sh
scripts/: updateServiceClientId.py
sns-proxy/: Dockerfile  haproxy.cfg
swagger/: jm-swaggergen-config.json  test-lambda-swaggergen-config.json  wm-swaggergen-config.json
test/: Dockerfile  run_tests.sh
test-common/: pom.xml
test-lambda/: pom.xml
worker/: Dockerfile  Dockerfile.gpu  Dockerfile.win  Pipfile  README.md  app.sh  gpu-app.sh  pyproject.toml  startup.bat
worker-manager/: Dockerfile  README.md  doc-gen.sh  generate_client.bat  generate_client.sh  generate_java_server.sh  (+2 more)
worker/src/main/: helloworld-gpu.py  input-schema.json  worker.py
(+412 files in other folders)
